[package]
name = "claims"
version = "0.1.0"
authors = ["Eduardo Turiño <eturino@eturino.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"             # An implementation of regular expressions for Rust. This implementation uses finite automata and gua…
lazy_static = "1.4.0"            # A macro for declaring lazily evaluated statics in Rust.
